nategateway.tf
# allocate elastic ip  that will be used for natgateway in the public subnet in az1

resource "aws_eip" "eip_for_nat_gateway_az1" {

    domain     = "vpc"

    tags    = {

        Name = "nat gateway az1 eip"
    }

  
}

# allocate elastic ip  that will be used for natgateway in the public subnet in az1

resource "aws_eip" "eip_for_nat_gateway_az2" {

    domain     = "vpc"

    tags    = {

        Name = "nat gateway az2 eip"
    }
  
}

# create natgateway for public subnet az1 

resource "aws_nat_gateway" "nate_gateway_az1" {
    allocation_id    = aws_eip.eip_for_nat_gateway_az1.id
    subnet_id        = aws_subnet.public_subnet_az1.id
    tags             = {

        Name         = "nat_gateway_az1"
    }
  


depends_on = [aws_internet_gateway.internet_gateway]
}


# create natgateway for public subnet az2

resource "aws_nat_gateway" "nate_gateway_az2" {
    allocation_id    = aws_eip.eip_for_nat_gateway_az2.id
    subnet_id        = aws_subnet.public_subnet_az2.id
    tags             = {

        Name         = "nat_gateway_az2"
    }
  


depends_on = [aws_internet_gateway.internet_gateway]

}


# create private route table az1 and add route through nat gateway az1

resource "aws_route_table" "private_route_table_az1" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nate_gateway_az1.id
    }
    tags = {
        Name = "private_route_table_az1"
    }
    
  
}


# associate private app subnet az1 with private route table az1

resource "aws_route_table_association" "private_app_subnet_az1_route_table_az1_association" {

    route_table_id = aws_route_table.private_route_table_az1.id
    subnet_id = aws_subnet.private_app_subnet_az1.id

  
}

# associate private data subnet az1 with private route table az1

resource "aws_route_table_association" "private_database_subnet_az1_route_table_az1_association" {

   subnet_id = aws_subnet.private_database_subnet_az1.id
    route_table_id = aws_route_table.private_route_table_az1.id

  
}

# create private route table az2 and add route through nat gateway az2

resource "aws_route_table" "private_route_table_az2" {

    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nate_gateway_az2.id
    }
        tags   = {
             Name = "private_route-table_AZ2"

  }    
  
}

# associate private app subnet az2 with private route table az2

resource "aws_route_table_association" "private_app_subnet_az2_route_table_az2_association" {
    subnet_id = aws_subnet.private_app_subnet_az2.id
    route_table_id = aws_route_table.private_route_table_az2.id

  
}

# associate private database subnet az2 with private route table az2

resource "aws_route_table_association" "private_database_subnet_az2_route_table_az2_association" {
    subnet_id = aws_subnet.private_database_subnet_az2.id
    route_table_id = aws_route_table.private_route_table_az2.id

  
}
